<resources>
    <string name="app_name">Ratatuille</string>

    <string name="welcome">
    WELCOME
    </string>

    <string name="amministratore">
    AMMINISTRATORE
    </string>

    <string name="supervisore">
    SUPERVISORE
    </string>

    <string name="cameriere">
    CAMERIERE
    </string>

    <string name="cuoco">
    CUOCO
    </string>

    <string name="login">
    LOGIN
    </string>

    <string name="torna_indietro">
    TORNA INDIETRO
    </string>

    <string name="cambio_password">
    CAMBIO PASSWORD
    </string>

    <string name="continua">
    CONTINUA
    </string>

    <string name="ordinazioni">
    ORDINAZIONI
    </string>

    <string name="messaggi">
    MESSAGGI
    </string>

    <string name="visualizza">
    VISUALIZZA
    </string>

    <string name="conferma">
    CONFERMA
    </string>

    <string name="tavolo">
    TAVOLO
    </string>

    <string name="comanda">
    COMANDA
    </string>

    <string name="scrivi">
    SCRIVI
    </string>

    <string name="invia">
    INVIA
    </string>

    <string name="scrivi_messaggio">
    scrivi messaggio
    </string>

    <string name="conto">
    CONTO
    </string>

    <string name="scarica">
    SCARICA
    </string>

    <string name="chiudi">
    CHIUDI
    </string>

    <string name="modifica_menu">
    MODIFICA MENU
    </string>

    <string name="modifica">
    MODIFICA
    </string>

    <string name="elimina">
    ELIMINA
    </string>

    <string name="aggiungi">
    AGGIUNGI
    </string>

    <string name="aggiungi_piatto">
    AGGIUNGI PIATTO
    </string>

    <string name="statistiche">
    STATISTICHE
    </string>

    <string name="calcola">
    CALCOLA
    </string>

    <string name="crea_utente">
    CREA UTENTE
    </string>

    <string name="cambia_password_utente">
    CAMBIA PASSWORD UTENTE
    </string>

    <string name="cambia_password">
    CAMBIA PASSWORD
    </string>

    <string name="conferma_cambio_password">
    CONFERMA CAMBIO PASSWORD
    </string>

    <string name="Categoria">
    Categoria
    </string>

    <string-array name="categorie">
        <item>antipasti</item>
        <item>primi</item>
        <item>secondi</item>
        <item>contorni</item>
        <item>dolci</item>
        <item>bevande</item>
        <item>frutta</item>
        <item>varie</item>
    </string-array>

    <string-array name="anni_inizio">
        <item>anno di inizio</item>
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
    </string-array>

    <string-array name="mesi_inizio">
        <item>mese di inizio</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="giorni_inizio">
        <item>giorno di inizio</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="anni_fine">
        <item>anno di fine</item>
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
    </string-array>

    <string-array name="mesi_fine">
        <item>mese di fine</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="giorni_fine">
        <item>giorno di fine</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="ruoli">
        <item>supervisore</item>
        <item>cameriere</item>
        <item>cuoco</item>
    </string-array>

</resources>