<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center">

    <View
        android:id="@+id/vector_1"
        android:layout_width="1335dp"
        android:layout_height="800dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/sfondo"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/frame_1"
        android:layout_width="447dp"
        android:layout_height="657dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:clipToOutline="true"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/vector_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vector_1">

        <Button
            android:id="@+id/button_1"
            android:layout_width="358dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="210dp"
            android:backgroundTint="@color/black"
            android:clipToOutline="true"
            android:text="@string/amministratore"
            android:textColor="@color/white"
            android:textSize="25dp" />


        <Button
            android:id="@+id/button_2"
            android:layout_width="358dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="310dp"
            android:backgroundTint="@color/black"
            android:clipToOutline="true"
            android:text="@string/supervisore"
            android:textSize="25dp" />


        <Button
            android:id="@+id/button_3"
            android:layout_width="358dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="410dp"
            android:backgroundTint="@color/black"
            android:clipToOutline="true"
            android:text="@string/cameriere"
            android:textSize="25dp" />


        <Button
            android:id="@+id/button_4"
            android:layout_width="358dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="510dp"
            android:backgroundTint="@color/black"
            android:clipToOutline="true"
            android:text="@string/cuoco"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="361dp"
            android:layout_height="78dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="39dp"
            android:gravity="center_horizontal|bottom"
            android:lineSpacingExtra="0sp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="64sp" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>