<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SupervisoreScriviMessaggioActivity">

    <View
        android:id="@+id/vector_1"
        android:layout_width="1335dp"
        android:layout_height="800dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/sfondo"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/frame_1"
        android:layout_width="800dp"
        android:layout_height="657dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:clipToOutline="true"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/vector_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vector_1" >

        <LinearLayout
            android:layout_width="800dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginEnd="0dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_500">
                <ImageButton
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:id="@+id/supervisore_logout"
                    android:backgroundTint="@color/black"
                    android:src="@drawable/__icon__logout_"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_500">

                <ImageButton
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:id="@+id/supervisore_aggiungi_piatto"
                    android:backgroundTint="@color/black"
                    android:src="@drawable/adding_1"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_500">
                <ImageButton
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:id="@+id/supervisore_modifica_menu"
                    android:backgroundTint="@color/black"
                    android:src="@drawable/__icon__menu_book_"/>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_500">
                <ImageButton
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:id="@+id/supervisore_conto"
                    android:backgroundTint="@color/black"
                    android:src="@drawable/__icon__list_alt_"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_500">
                <ImageButton
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:backgroundTint="@color/black"
                    android:id="@+id/supervisore_messaggi"
                    android:src="@drawable/__icon__email_messagge_inbox_clicked"/>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>


        <Button
            android:id="@+id/btn_scrivi"
            android:layout_width="214dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="160dp"
            android:backgroundTint="@color/black"
            android:clipToOutline="true"
            android:text="@string/scrivi"
            android:textColor="#8B00FF"
            android:textSize="25sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/supervisore_lista_messaggi_1"
            android:layout_width="214dp"
            android:layout_height="220dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="223dp"
            android:layout_marginRight="200dp"
            android:orientation="vertical"></androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/messaggi"
            android:layout_width="match_parent"
            android:layout_height="95sp"
            android:text="@string/messaggi"
            android:textSize="64sp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_invia"
            android:layout_width="358dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="330dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="460dp"
            android:backgroundTint="@color/black"
            android:clipToOutline="true"
            android:text="@string/invia"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="518dp"
            android:layout_height="283dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="160dp"
            app:strokeColor="@color/grigio_scuro"
            app:strokeWidth="1dp">
            <EditText
                android:id="@+id/edit_messaggio"
                android:layout_width="518dp"
                android:layout_height="70dp"
                android:textColor="@color/black"
                android:hint="@string/scrivi_messaggio"
                android:background="@color/white"/>
        </com.google.android.material.card.MaterialCardView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>