<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AdminCambiaPasswordUtenteActivity">

    <View
        android:id="@+id/vector_1"
        android:layout_width="1335dp"
        android:layout_height="800dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/sfondo"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/frame_1"
        android:layout_width="804dp"
        android:layout_height="670dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:clipToOutline="true"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/vector_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vector_1" >

        <LinearLayout
            android:layout_width="800dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginEnd="0dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_500">
                <ImageButton
                    android:layout_width="134dp"
                    android:layout_height="100dp"
                    android:id="@+id/admin_logout"
                    android:backgroundTint="@color/black"
                    android:src="@drawable/__icon__logout_"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_500">
                <ImageButton
                    android:layout_width="134dp"
                    android:layout_height="100dp"
                    android:id="@+id/admin_aggiungi_ordine"
                    android:backgroundTint="@color/black"
                    android:src="@drawable/adding_1"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_500">
                <ImageButton
                    android:layout_width="134dp"
                    android:layout_height="100dp"
                    android:id="@+id/admin_ordinazioni"
                    android:backgroundTint="@color/black"
                    android:src="@drawable/__icon__menu_book_"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_500">
                <ImageButton
                    android:layout_width="134dp"
                    android:layout_height="100dp"
                    android:backgroundTint="@color/black"
                    android:id="@+id/admin_messaggi"
                    android:src="@drawable/__icon__email_message_inbox_"/>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_500">
                <ImageButton
                    android:layout_width="134dp"
                    android:layout_height="100dp"
                    android:backgroundTint="@color/black"
                    android:id="@+id/admin_statistiche"
                    android:src="@drawable/monitoring_fill0_wght400_grad0_opsz48_1"/>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_500">
                <ImageButton
                    android:layout_width="134dp"
                    android:layout_height="100dp"
                    android:backgroundTint="@color/black"
                    android:id="@+id/admin_add_utente"
                    android:src="@drawable/vector"/>


            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <TextView
            android:id="@+id/crea_utente"
            android:layout_width="match_parent"
            android:layout_height="95sp"
            android:gravity="center"
            android:text="@string/cambia_password"
            android:textColor="@color/black"
            android:textSize="64sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="214dp"
            android:layout_height="283dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="200dp"
            android:orientation="vertical"></androidx.recyclerview.widget.RecyclerView>

        <EditText
            android:id="@+id/edit_new_password"
            android:layout_width="350dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="300dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/bordo_nero"
            android:hint="Password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edit_conferma_password"
            android:layout_width="350dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="300dp"
            android:layout_marginTop="250dp"
            android:background="@drawable/bordo_nero"
            android:hint="Password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="300dp"
            android:layout_marginTop="380dp"
            android:backgroundTint="@color/black"
            android:clipToOutline="true"
            android:text="@string/conferma_cambio_password"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="300dp"
            android:layout_marginTop="480dp"
            android:backgroundTint="@color/black"
            android:clipToOutline="true"
            android:text="@string/torna_indietro"
            android:textColor="@color/white"
            android:textSize="25sp" />



    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>